src/objects/CRMfusionDBR101__AutoMerge_Setting__c.object
<CustomObject>
    <customHelpPage>CRMfusionDBR101__DB_Help</customHelpPage>
    <fields>
        <fullName>CRMfusionDBR101__Create_Task__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Checking this option will create a task containing the data from the merged record when an automatic merge is made.</inlineHelpText>
        <label>Save as Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Default_Include_in_Task__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Indicates whether or not all fields should be included in the task created from the merge containing data from the original record by default.  This value can be over-ridden by individual field settings below.</inlineHelpText>
        <label>Default Include in Task Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Default_Mergeable_Action__c</fullName>
        <inlineHelpText>The action that should be taken by default for mergeable fields during an automatic merge. This action can be over-ridden on a field-by-field basis below. See the DupeBlocker documentation for full action descriptions.</inlineHelpText>
        <label>Default Mergeable Field Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ignore</fullName>
                    <default>true</default>
                    <label>Ignore</label>
                </value>
                <value>
                    <fullName>Update if Blank</fullName>
                </value>
                <value>
                    <fullName>Overwrite</fullName>
                </value>
                <value>
                    <fullName>Merge Values</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Default_Nonmergeable_Action__c</fullName>
        <inlineHelpText>The action that should be taken by default for non-mergeable fields during an automatic merge. This action can be over-ridden on a field-by-field basis below. See the DupeBlocker documentation for full action descriptions.</inlineHelpText>
        <label>Default Non-Mergeable Field Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ignore</fullName>
                    <default>true</default>
                    <label>Ignore</label>
                </value>
                <value>
                    <fullName>Update if Blank</fullName>
                </value>
                <value>
                    <fullName>Overwrite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Key__c</fullName>
        <description>Internal key for upserting.  This is just the scenario Id.</description>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Merge_Priority__c</fullName>
        <defaultValue>10</defaultValue>
        <inlineHelpText>This field specifies the order in which multiple auto-merge scenarios are acted upon.  The lower the number, the higher the priority.  This is only used when multiple auto-merge scenarios are matched for a single record.</inlineHelpText>
        <label>Merge Priority</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Merge_Target__c</fullName>
        <inlineHelpText>This option controls which duplicate record is selected as the master for an automatic merge.</inlineHelpText>
        <label>Merge Target</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oldest Record</fullName>
                    <default>true</default>
                    <label>Oldest Record</label>
                </value>
                <value>
                    <fullName>Newest Record</fullName>
                </value>
                <value>
                    <fullName>Last Updated Record</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Scenario__c</fullName>
        <label>Scenario</label>
        <referenceTo>CRMfusionDBR101__Scenario__c</referenceTo>
        <relationshipLabel>DupeBlocker Auto-Merge Settings</relationshipLabel>
        <relationshipName>AutoMerge_Settings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Task_Due_Date__c</fullName>
        <inlineHelpText>The due date that should be used when creating a task from the merged record during an automatic merge.</inlineHelpText>
        <label>Task Due Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Immediate</fullName>
                    <default>true</default>
                    <label>Immediate</label>
                </value>
                <value>
                    <fullName>1 Day</fullName>
                </value>
                <value>
                    <fullName>2 Days</fullName>
                </value>
                <value>
                    <fullName>3 Days</fullName>
                </value>
                <value>
                    <fullName>4 Days</fullName>
                </value>
                <value>
                    <fullName>5 Days</fullName>
                </value>
                <value>
                    <fullName>6 Days</fullName>
                </value>
                <value>
                    <fullName>1 Week</fullName>
                </value>
                <value>
                    <fullName>2 Weeks</fullName>
                </value>
                <value>
                    <fullName>3 Weeks</fullName>
                </value>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>2 Months</fullName>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>4 Months</fullName>
                </value>
                <value>
                    <fullName>5 Months</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>7 Months</fullName>
                </value>
                <value>
                    <fullName>8 Months</fullName>
                </value>
                <value>
                    <fullName>9 Months</fullName>
                </value>
                <value>
                    <fullName>10 Months</fullName>
                </value>
                <value>
                    <fullName>11 Months</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Task_Owner__c</fullName>
        <inlineHelpText>The owner of the task that is created when a record is merged automatically.  If the object doesn&apos;t support ownership then Current User is the only option.</inlineHelpText>
        <label>Task Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current User</fullName>
                    <default>true</default>
                    <label>Current User</label>
                </value>
                <value>
                    <fullName>Master Record Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Task_Status__c</fullName>
        <inlineHelpText>The status to assign to the task.</inlineHelpText>
        <label>Task Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Task_Subject__c</fullName>
        <defaultValue>&apos;DupeBlocker Auto-Merge Data - Merged Record&apos;</defaultValue>
        <inlineHelpText>The subject that should be used when creating the task for the merged record during an automatic merge.</inlineHelpText>
        <label>Task Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DupeBlocker Auto-Merge Setting</label>
    <nameField>
        <displayFormat>Setting: {0}</displayFormat>
        <label>DupeBlocker Auto-Merge Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DupeBlocker Auto-Merge Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CRMfusionDBR101__Default_Mergeable_Action_Not_Null</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISNULL( TEXT(  CRMfusionDBR101__Default_Mergeable_Action__c ) ), TEXT(  CRMfusionDBR101__Default_Mergeable_Action__c ) = &apos;&apos; )</errorConditionFormula>
        <errorDisplayField>CRMfusionDBR101__Default_Mergeable_Action__c</errorDisplayField>
        <errorMessage>The Default Mergeable Action must be specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMfusionDBR101__Default_NonMergeable_Action_Not_Null</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISNULL( TEXT(  CRMfusionDBR101__Default_Nonmergeable_Action__c ) ), TEXT(  CRMfusionDBR101__Default_Nonmergeable_Action__c ) = &apos;&apos; )</errorConditionFormula>
        <errorDisplayField>CRMfusionDBR101__Default_Nonmergeable_Action__c</errorDisplayField>
        <errorMessage>The Default Non-Mergeable Action must be provided.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMfusionDBR101__Merge_Target_Not_Null</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISNULL( TEXT( CRMfusionDBR101__Merge_Target__c ) ), TEXT( CRMfusionDBR101__Merge_Target__c ) = &apos;&apos; )</errorConditionFormula>
        <errorDisplayField>CRMfusionDBR101__Merge_Target__c</errorDisplayField>
        <errorMessage>The Merge Target must be specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMfusionDBR101__Task_Due_Date_Null_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CRMfusionDBR101__Create_Task__c, OR( ISNULL( TEXT( CRMfusionDBR101__Task_Due_Date__c ) ), TEXT(CRMfusionDBR101__Task_Due_Date__c ) = &apos;&apos; ) )</errorConditionFormula>
        <errorDisplayField>CRMfusionDBR101__Task_Due_Date__c</errorDisplayField>
        <errorMessage>If the Save as Task option is selected, you must provide a task due date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMfusionDBR101__Task_Owner_Null_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  CRMfusionDBR101__Create_Task__c  == true, OR( ISNULL( TEXT( CRMfusionDBR101__Task_Owner__c ) ), TEXT( CRMfusionDBR101__Task_Owner__c ) = &apos;&apos; ) )</errorConditionFormula>
        <errorDisplayField>CRMfusionDBR101__Task_Owner__c</errorDisplayField>
        <errorMessage>If the Save as Task option is selected, you must select a task owner.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMfusionDBR101__Task_Subject_Check_Null</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CRMfusionDBR101__Create_Task__c, OR( ISNULL( CRMfusionDBR101__Task_Subject__c ), CRMfusionDBR101__Task_Subject__c = &apos;&apos; ) )</errorConditionFormula>
        <errorDisplayField>CRMfusionDBR101__Task_Subject__c</errorDisplayField>
        <errorMessage>If the Save as Task option is selected, a Task Subject must be provided.</errorMessage>
    </validationRules>
</CustomObject>